--- a/FinalLR.ipynb
+++ b/FinalLR.ipynb
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "sWBdL86GDCKu",
         "colab_type": "code",
-        "outputId": "269901c5-0043-48e0-9aaa-4dbc62cbf1ab",
+        "outputId": "98e6d8fb-3fde-4bdf-da4e-0db3cb7c1b79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -121,7 +121,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 51,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 95
         }
       ]
     },
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "Yn0GPWPFJNKj",
         "colab_type": "code",
-        "outputId": "8849991b-123f-456f-bb97-9fd8ba05da74",
+        "outputId": "24800d7d-9190-45bd-b4e1-ef503b229f15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -456,7 +456,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 52,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
       "metadata": {
         "id": "_pmaRSJ55vYc",
         "colab_type": "code",
-        "outputId": "03bf194c-f48e-4598-8b72-63841c6f9a25",
+        "outputId": "ce66ad67-88df-45fa-acf8-3940c14e112d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -503,7 +503,7 @@
         "mae = mean_absolute_error(y_actual, y_pred)\n",
         "print('Baseline MAE = ', mae)"
       ],
-      "execution_count": 54,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "87HIQII5SbJ2",
         "colab_type": "code",
-        "outputId": "8bee824d-6c78-456d-9f36-117b71b15c44",
+        "outputId": "c09b55b5-afc2-4270-c377-59a90df82421",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -674,7 +674,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +849,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 101
         }
       ]
     },
@@ -858,7 +858,7 @@
       "metadata": {
         "id": "eVORTUrgSXhS",
         "colab_type": "code",
-        "outputId": "eb4c9f10-f4e0-4989-cda1-e0edabcbd3fb",
+        "outputId": "15c97c6a-4970-4674-d649-3abdee35e2cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -868,7 +868,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 58,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1043,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 102
         }
       ]
     },
@@ -1071,7 +1071,7 @@
       "metadata": {
         "id": "rYWZrxMfJnwY",
         "colab_type": "code",
-        "outputId": "453248c9-65bf-4b07-b837-0fbd9c9241a7",
+        "outputId": "6d2f2a8a-42bf-44ce-8c19-11f7eda03fdc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1081,7 +1081,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 60,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 104
         }
       ]
     },
@@ -1265,7 +1265,7 @@
       "metadata": {
         "id": "YmE3VreuJqlb",
         "colab_type": "code",
-        "outputId": "cde62eca-f91f-4133-9c7d-635b1545e59b",
+        "outputId": "84ae5de8-5bf9-4ab7-d07f-2a76e9b5b796",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1275,7 +1275,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 61,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 105
         }
       ]
     },
@@ -1459,7 +1459,7 @@
       "metadata": {
         "id": "HqDPADa-CCGZ",
         "colab_type": "code",
-        "outputId": "78e8a108-accf-4b3c-9761-79457b4f2a43",
+        "outputId": "c7ee3324-0f69-4117-fb45-989ce53b7d41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1473,7 +1473,7 @@
         "val  = temp[temp['year_sold'] >= 2017]\n",
         "print(train.shape, val.shape, test.shape)"
       ],
-      "execution_count": 62,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -1489,7 +1489,7 @@
       "metadata": {
         "id": "kFxdeaqTEMzC",
         "colab_type": "code",
-        "outputId": "c6997de7-b2bf-4391-d35e-f1576e0bbefd",
+        "outputId": "55bdc513-d6e8-4c86-85f9-a7f2c56b76fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1535,7 +1535,7 @@
         "print('Test Mean Absolute Error:', test_mae)\n",
         "print('Test R^2:', test_r2)"
       ],
-      "execution_count": 63,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1556,7 @@
       "metadata": {
         "id": "CoUBT98skL0D",
         "colab_type": "code",
-        "outputId": "5d3a7ad8-2178-4ee2-ee54-860316435797",
+        "outputId": "3a81e88e-1cb0-452f-baf6-f91624e958b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 445
@@ -1575,7 +1575,7 @@
         "print(final.shape)\n",
         "final.head()"
       ],
-      "execution_count": 64,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -1780,7 +1780,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 108
         }
       ]
     },
@@ -1789,7 +1789,7 @@
       "metadata": {
         "id": "KsWIvx0NiPoK",
         "colab_type": "code",
-        "outputId": "08aaa344-b6b9-440d-f321-1c468d781f4d",
+        "outputId": "d5c51b38-708b-49eb-dcb6-d2c8bb9791a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1813,7 +1813,7 @@
         "print('Prediction Within 10 percent - %.4f%%' % (pred_ten_percent * 100))\n",
         "print('Prediction Within 20 percent - %.4f%%' % (pred_twenty_percent * 100))"
       ],
-      "execution_count": 65,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -1832,7 +1832,7 @@
       "metadata": {
         "id": "uiLqJu5bOaoc",
         "colab_type": "code",
-        "outputId": "beeae819-91db-4141-a45d-0fe7ced0d664",
+        "outputId": "a8b16d7d-4546-4f32-c1c5-40b5560dfb72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 441
@@ -1849,7 +1849,7 @@
         "plt.hist((final['pred_percent'] * 100), bins=50)\n",
         "plt.gca().set(title='Frequency Histogram of Prediction Errors', xlabel='Error Percentage', ylabel='Frequency');"
       ],
-      "execution_count": 66,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1870,10 +1870,10 @@
       "metadata": {
         "id": "AEcL_zBqAslg",
         "colab_type": "code",
-        "outputId": "620cec3d-01b3-421b-a203-ace32dff13f8",
+        "outputId": "f796444b-ce64-4020-c870-0b61a0c85a27",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 581
         }
       },
       "source": [
@@ -1920,13 +1920,14 @@
         "  shap_values = pro_str + ' ' + con_str\n",
         "    \n",
         "  return shap_values\n",
-        "  \n",
+        " \n",
+        "final['shap'] = ' '  \n",
         "for ind in final.index:\n",
-        "  final['shap'] = explain(ind)\n",
+        "  final['shap'][ind] = explain(ind)\n",
         "  \n",
         "final.head()"
       ],
-      "execution_count": 67,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2004,7 +2005,7 @@
               "      <td>618 48th Ave, San Francisco, CA 94121-2410</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>-0.001194</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) comp_price = 3605916 2) year_sold = 2...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2032,7 +2033,7 @@
               "      <td>1516 Great Highway, San Francisco, CA 94122</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
               "      <td>-0.133425</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2060,7 +2061,7 @@
               "      <td>1492 La Playa St, San Francisco, CA 94122</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
               "      <td>-0.191661</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) park_leased = ONS...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2088,7 +2089,7 @@
               "      <td>784 48th Ave, San Francisco, CA 94121</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>0.129650</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.773...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2116,7 +2117,7 @@
               "      <td>525 47th Ave, San Francisco, CA 94121</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>-0.076172</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.778...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2124,11 +2125,11 @@
             ],
             "text/plain": [
               "   index  ...                                               shap\n",
-              "0      0  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "1      1  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "2      2  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "3      3  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "4      4  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
+              "0      0  ...  Pros: 1) comp_price = 3605916 2) year_sold = 2...\n",
+              "1      1  ...  Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...\n",
+              "2      2  ...  Pros: 1) year_sold = 2018 2) park_leased = ONS...\n",
+              "3      3  ...  Pros: 1) year_sold = 2018 2) latitude = 37.773...\n",
+              "4      4  ...  Pros: 1) year_sold = 2018 2) latitude = 37.778...\n",
               "\n",
               "[5 rows x 25 columns]"
             ]
@@ -2136,7 +2137,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 111
         }
       ]
     },
@@ -2145,10 +2146,10 @@
       "metadata": {
         "id": "ih_i4GfOpnZ3",
         "colab_type": "code",
-        "outputId": "69997e0f-b532-43e0-b0aa-6ccf915c770c",
+        "outputId": "c4170ea3-7e6d-4a71-f60c-1dcb95b4c0a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 561
+          "height": 578
         }
       },
       "source": [
@@ -2157,7 +2158,7 @@
         "print(data.shape)\n",
         "data.head()"
       ],
-      "execution_count": 68,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -2206,7 +2207,7 @@
               "      <td>3310000</td>\n",
               "      <td>3306051</td>\n",
               "      <td>-3948</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) comp_price = 3605916 2) year_sold = 2...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2216,7 +2217,7 @@
               "      <td>1830000</td>\n",
               "      <td>1614575</td>\n",
               "      <td>-215424</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2226,7 +2227,7 @@
               "      <td>1300000</td>\n",
               "      <td>1090913</td>\n",
               "      <td>-209086</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) park_leased = ONS...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2236,7 +2237,7 @@
               "      <td>1300000</td>\n",
               "      <td>1493652</td>\n",
               "      <td>193652</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.773...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2246,7 +2247,7 @@
               "      <td>1865000</td>\n",
               "      <td>1732993</td>\n",
               "      <td>-132006</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) comp_price = 2074...</td>\n",
+              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.778...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2254,11 +2255,11 @@
             ],
             "text/plain": [
               "                                  full_address  ...                                               shap\n",
-              "0   618 48th Ave, San Francisco, CA 94121-2410  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "1  1516 Great Highway, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "2    1492 La Playa St, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "3        784 48th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
-              "4        525 47th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) comp_price = 2074...\n",
+              "0   618 48th Ave, San Francisco, CA 94121-2410  ...  Pros: 1) comp_price = 3605916 2) year_sold = 2...\n",
+              "1  1516 Great Highway, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...\n",
+              "2    1492 La Playa St, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) park_leased = ONS...\n",
+              "3        784 48th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) latitude = 37.773...\n",
+              "4        525 47th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) latitude = 37.778...\n",
               "\n",
               "[5 rows x 7 columns]"
             ]
@@ -2266,7 +2267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 112
         }
       ]
     },
