--- a/FinalLR.ipynb
+++ b/FinalLR.ipynb
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "sWBdL86GDCKu",
         "colab_type": "code",
-        "outputId": "98e6d8fb-3fde-4bdf-da4e-0db3cb7c1b79",
+        "outputId": "f1670360-1052-4826-d421-50b23118d7e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -121,7 +121,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 95,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 24
         }
       ]
     },
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "Yn0GPWPFJNKj",
         "colab_type": "code",
-        "outputId": "24800d7d-9190-45bd-b4e1-ef503b229f15",
+        "outputId": "6e13f3eb-8c0a-40bb-c367-794933fb16c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -456,7 +456,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 96,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
       "metadata": {
         "id": "_pmaRSJ55vYc",
         "colab_type": "code",
-        "outputId": "ce66ad67-88df-45fa-acf8-3940c14e112d",
+        "outputId": "b239454f-dc2a-4380-de91-d377a5243c42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -503,7 +503,7 @@
         "mae = mean_absolute_error(y_actual, y_pred)\n",
         "print('Baseline MAE = ', mae)"
       ],
-      "execution_count": 98,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "87HIQII5SbJ2",
         "colab_type": "code",
-        "outputId": "c09b55b5-afc2-4270-c377-59a90df82421",
+        "outputId": "d86c2449-1305-4dd9-8f84-2a1e5f577493",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -674,7 +674,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 101,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +849,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 30
         }
       ]
     },
@@ -858,7 +858,7 @@
       "metadata": {
         "id": "eVORTUrgSXhS",
         "colab_type": "code",
-        "outputId": "15c97c6a-4970-4674-d649-3abdee35e2cd",
+        "outputId": "13718b4d-1e71-48e8-b950-c12b7614b0f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -868,7 +868,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 102,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1043,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 31
         }
       ]
     },
@@ -1071,7 +1071,7 @@
       "metadata": {
         "id": "rYWZrxMfJnwY",
         "colab_type": "code",
-        "outputId": "6d2f2a8a-42bf-44ce-8c19-11f7eda03fdc",
+        "outputId": "d61d9b6b-ae89-4b7e-f31a-c5902872c823",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1081,7 +1081,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 104,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 33
         }
       ]
     },
@@ -1265,7 +1265,7 @@
       "metadata": {
         "id": "YmE3VreuJqlb",
         "colab_type": "code",
-        "outputId": "84ae5de8-5bf9-4ab7-d07f-2a76e9b5b796",
+        "outputId": "0c4d26d5-3cbd-47d6-a4a2-26877244fbb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1275,7 +1275,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 105,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 105
+          "execution_count": 34
         }
       ]
     },
@@ -1459,7 +1459,7 @@
       "metadata": {
         "id": "HqDPADa-CCGZ",
         "colab_type": "code",
-        "outputId": "c7ee3324-0f69-4117-fb45-989ce53b7d41",
+        "outputId": "3b3a2625-2a7e-465d-8ceb-34d2cdc040e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1473,7 +1473,7 @@
         "val  = temp[temp['year_sold'] >= 2017]\n",
         "print(train.shape, val.shape, test.shape)"
       ],
-      "execution_count": 106,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1489,7 +1489,7 @@
       "metadata": {
         "id": "kFxdeaqTEMzC",
         "colab_type": "code",
-        "outputId": "55bdc513-d6e8-4c86-85f9-a7f2c56b76fa",
+        "outputId": "94b8de04-07d5-46ef-fe2d-d06b17df47ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1535,7 +1535,7 @@
         "print('Test Mean Absolute Error:', test_mae)\n",
         "print('Test R^2:', test_r2)"
       ],
-      "execution_count": 107,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1556,7 @@
       "metadata": {
         "id": "CoUBT98skL0D",
         "colab_type": "code",
-        "outputId": "3a81e88e-1cb0-452f-baf6-f91624e958b8",
+        "outputId": "6798f031-74f2-43e4-cedc-b4e7452bd4ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 445
@@ -1575,7 +1575,7 @@
         "print(final.shape)\n",
         "final.head()"
       ],
-      "execution_count": 108,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1780,7 +1780,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 37
         }
       ]
     },
@@ -1789,7 +1789,7 @@
       "metadata": {
         "id": "KsWIvx0NiPoK",
         "colab_type": "code",
-        "outputId": "d5c51b38-708b-49eb-dcb6-d2c8bb9791a2",
+        "outputId": "150837c5-4b9b-476e-d370-f1df0c75fe0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1813,7 +1813,7 @@
         "print('Prediction Within 10 percent - %.4f%%' % (pred_ten_percent * 100))\n",
         "print('Prediction Within 20 percent - %.4f%%' % (pred_twenty_percent * 100))"
       ],
-      "execution_count": 109,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1832,7 +1832,7 @@
       "metadata": {
         "id": "uiLqJu5bOaoc",
         "colab_type": "code",
-        "outputId": "a8b16d7d-4546-4f32-c1c5-40b5560dfb72",
+        "outputId": "0abee93e-d9ec-4508-995e-d71497a6fd23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 441
@@ -1849,7 +1849,7 @@
         "plt.hist((final['pred_percent'] * 100), bins=50)\n",
         "plt.gca().set(title='Frequency Histogram of Prediction Errors', xlabel='Error Percentage', ylabel='Frequency');"
       ],
-      "execution_count": 110,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1870,14 +1870,14 @@
       "metadata": {
         "id": "AEcL_zBqAslg",
         "colab_type": "code",
-        "outputId": "f796444b-ce64-4020-c870-0b61a0c85a27",
+        "outputId": "7eb81973-e3ba-4cc7-e46d-9a01813c9392",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 564
         }
       },
       "source": [
-        "# Calculate the 3 top and bottom shapley values for each prediction\n",
+        "# Calculate the 2 top and bottom shapley values for each prediction\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
@@ -1903,21 +1903,21 @@
         "  feature_values = row.values[0]\n",
         "  shaps = pd.Series(shap_values[0], zip(feature_names,feature_values))\n",
         "\n",
-        "  pros = shaps.sort_values(ascending=False)[:3].index\n",
-        "  cons = shaps.sort_values(ascending=True)[:3].index\n",
+        "  pros = shaps.sort_values(ascending=False)[:2].index\n",
+        "  cons = shaps.sort_values(ascending=True)[:2].index\n",
         "  \n",
-        "  pro_str = 'Pros: '\n",
-        "  con_str = 'Cons: '\n",
+        "  pro_str = 'Pros - '\n",
+        "  con_str = 'Cons - '\n",
         "  \n",
         "  for i, pro in enumerate(pros, start=1):\n",
         "    feature_name, feature_value = pro\n",
-        "    pro_str = pro_str + str(i) + ') ' + feature_name + ' = ' + str(feature_value) + ' '\n",
+        "    pro_str = pro_str + str(i) + ': ' + feature_name + ' = ' + str(feature_value) + ' '\n",
         "    \n",
         "  for i, con in enumerate(cons, start=1):\n",
         "    feature_name, feature_value = con\n",
-        "    con_str = con_str + str(i) + ') ' + feature_name + ' = ' + str(feature_value) + ' '\n",
+        "    con_str = con_str + str(i) + ': ' + feature_name + ' = ' + str(feature_value) + ' '\n",
         "    \n",
-        "  shap_values = pro_str + ' ' + con_str\n",
+        "  shap_values = pro_str + '  ' + con_str\n",
         "    \n",
         "  return shap_values\n",
         " \n",
@@ -1927,7 +1927,7 @@
         "  \n",
         "final.head()"
       ],
-      "execution_count": 111,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2005,7 +2005,7 @@
               "      <td>618 48th Ave, San Francisco, CA 94121-2410</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>-0.001194</td>\n",
-              "      <td>Pros: 1) comp_price = 3605916 2) year_sold = 2...</td>\n",
+              "      <td>Pros - 1: comp_price = 3605916 2: year_sold = ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2033,7 +2033,7 @@
               "      <td>1516 Great Highway, San Francisco, CA 94122</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
               "      <td>-0.133425</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: baths = 3.0   Co...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2061,7 +2061,7 @@
               "      <td>1492 La Playa St, San Francisco, CA 94122</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
               "      <td>-0.191661</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) park_leased = ONS...</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: park_leased = ON...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2089,7 +2089,7 @@
               "      <td>784 48th Ave, San Francisco, CA 94121</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>0.129650</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.773...</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: latitude = 37.77...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2117,7 +2117,7 @@
               "      <td>525 47th Ave, San Francisco, CA 94121</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
               "      <td>-0.076172</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.778...</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: latitude = 37.77...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2125,11 +2125,11 @@
             ],
             "text/plain": [
               "   index  ...                                               shap\n",
-              "0      0  ...  Pros: 1) comp_price = 3605916 2) year_sold = 2...\n",
-              "1      1  ...  Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...\n",
-              "2      2  ...  Pros: 1) year_sold = 2018 2) park_leased = ONS...\n",
-              "3      3  ...  Pros: 1) year_sold = 2018 2) latitude = 37.773...\n",
-              "4      4  ...  Pros: 1) year_sold = 2018 2) latitude = 37.778...\n",
+              "0      0  ...  Pros - 1: comp_price = 3605916 2: year_sold = ...\n",
+              "1      1  ...  Pros - 1: year_sold = 2018 2: baths = 3.0   Co...\n",
+              "2      2  ...  Pros - 1: year_sold = 2018 2: park_leased = ON...\n",
+              "3      3  ...  Pros - 1: year_sold = 2018 2: latitude = 37.77...\n",
+              "4      4  ...  Pros - 1: year_sold = 2018 2: latitude = 37.77...\n",
               "\n",
               "[5 rows x 25 columns]"
             ]
@@ -2137,7 +2137,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 111
+          "execution_count": 40
         }
       ]
     },
@@ -2146,24 +2146,24 @@
       "metadata": {
         "id": "ih_i4GfOpnZ3",
         "colab_type": "code",
-        "outputId": "c4170ea3-7e6d-4a71-f60c-1dcb95b4c0a9",
+        "outputId": "92dd4098-7acf-4d1e-a54e-970b8df33448",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 578
+          "height": 391
         }
       },
       "source": [
         "# Create the data table for the display\n",
-        "data = final[['full_address', 'neighborhood', 'nid', 'sale_price', 'prediction', 'difference', 'shap']]\n",
+        "data = final[['full_address', 'neighborhood', 'nid', 'sale_price', 'prediction', 'difference', 'pred_percent', 'shap']]\n",
         "print(data.shape)\n",
         "data.head()"
       ],
-      "execution_count": 112,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(1879, 7)\n"
+            "(1879, 8)\n"
           ],
           "name": "stdout"
         },
@@ -2195,6 +2195,7 @@
               "      <th>sale_price</th>\n",
               "      <th>prediction</th>\n",
               "      <th>difference</th>\n",
+              "      <th>pred_percent</th>\n",
               "      <th>shap</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -2207,7 +2208,8 @@
               "      <td>3310000</td>\n",
               "      <td>3306051</td>\n",
               "      <td>-3948</td>\n",
-              "      <td>Pros: 1) comp_price = 3605916 2) year_sold = 2...</td>\n",
+              "      <td>-0.001194</td>\n",
+              "      <td>Pros - 1: comp_price = 3605916 2: year_sold = ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2217,7 +2219,8 @@
               "      <td>1830000</td>\n",
               "      <td>1614575</td>\n",
               "      <td>-215424</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...</td>\n",
+              "      <td>-0.133425</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: baths = 3.0   Co...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2227,7 +2230,8 @@
               "      <td>1300000</td>\n",
               "      <td>1090913</td>\n",
               "      <td>-209086</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) park_leased = ONS...</td>\n",
+              "      <td>-0.191661</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: park_leased = ON...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2237,7 +2241,8 @@
               "      <td>1300000</td>\n",
               "      <td>1493652</td>\n",
               "      <td>193652</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.773...</td>\n",
+              "      <td>0.129650</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: latitude = 37.77...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2247,7 +2252,8 @@
               "      <td>1865000</td>\n",
               "      <td>1732993</td>\n",
               "      <td>-132006</td>\n",
-              "      <td>Pros: 1) year_sold = 2018 2) latitude = 37.778...</td>\n",
+              "      <td>-0.076172</td>\n",
+              "      <td>Pros - 1: year_sold = 2018 2: latitude = 37.77...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2255,19 +2261,19 @@
             ],
             "text/plain": [
               "                                  full_address  ...                                               shap\n",
-              "0   618 48th Ave, San Francisco, CA 94121-2410  ...  Pros: 1) comp_price = 3605916 2) year_sold = 2...\n",
-              "1  1516 Great Highway, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) baths = 3.0 3) pa...\n",
-              "2    1492 La Playa St, San Francisco, CA 94122  ...  Pros: 1) year_sold = 2018 2) park_leased = ONS...\n",
-              "3        784 48th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) latitude = 37.773...\n",
-              "4        525 47th Ave, San Francisco, CA 94121  ...  Pros: 1) year_sold = 2018 2) latitude = 37.778...\n",
+              "0   618 48th Ave, San Francisco, CA 94121-2410  ...  Pros - 1: comp_price = 3605916 2: year_sold = ...\n",
+              "1  1516 Great Highway, San Francisco, CA 94122  ...  Pros - 1: year_sold = 2018 2: baths = 3.0   Co...\n",
+              "2    1492 La Playa St, San Francisco, CA 94122  ...  Pros - 1: year_sold = 2018 2: park_leased = ON...\n",
+              "3        784 48th Ave, San Francisco, CA 94121  ...  Pros - 1: year_sold = 2018 2: latitude = 37.77...\n",
+              "4        525 47th Ave, San Francisco, CA 94121  ...  Pros - 1: year_sold = 2018 2: latitude = 37.77...\n",
               "\n",
-              "[5 rows x 7 columns]"
+              "[5 rows x 8 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 41
         }
       ]
     },
